snapshots/syntax/library/functions/graphics/spc/spc_multiple_calls.snap
---
source: src/syntax/library/functions/graphics/spc.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: PrintStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: Octothorpe
                  text: "#"
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"A\""
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Spc
                - kind: LeftParenthesis
                  text: (
                - kind: IntegerLiteral
                  text: "3"
                - kind: RightParenthesis
                  text: )
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"B\""
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Spc
                - kind: LeftParenthesis
                  text: (
                - kind: IntegerLiteral
                  text: "5"
                - kind: RightParenthesis
                  text: )
                - kind: Semicolon
                  text: ;
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"C\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
